--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
       <th class="heading">Feeds</th>
       <th class="heading">Analyze</th>
     </tr>
+      <a href="Product-Entry.html">Product Entry</a>
 
 
   </table>
