--- a/index.html
+++ b/index.html
@@ -1,27 +1,41 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title>Prodamas</title>
-    <link rel="stylesheet" href="css/styles.css">
-    <link rel="icon" href="favicon.ico">
-  </head>
-  <body>
 
-    <div class="heading">
-          <h1>Product Data Management System</h1>
+<head>
+  <meta charset="utf-8">
+  <title>Prodamas</title>
+  <link rel="stylesheet" href="css/styles.css">
+  <link rel="icon" href="favicon.ico?v=2">
+</head>
+
+<body>
+  <div class="header">
+    <img class="roun" src="image/newlogo.png" alt="Logo">
+    <h1 class="mnam"><span class="under">Pro</span>duct <span class="under">Da</span>ta <span class="under">Ma</span>nagement <span class="under">S</span>ystem</h1>
+  </div>
+  <hr>
+  <div class="main_box">
+    <div class="feed">
+      <h2 class="sub">FEED</h2>
+      <div class="feed_ins">
+        <a href="Product-Entry.html">Bulk VIII</a>
+      </div>
+      <div class="feed_ins">
+        <a href="Product-Entry.html">Bulk IX</a>
+      </div>
     </div>
-    <hr>
-  <table cellspacing="10">
+    <div class="view">
+      <h2 class="sub">VIEW</h2>
+    </div>
+
+  </div>
+  <!--<table cellspacing="10">
     <tr>
-      <th class="heading">Feeds</th>
-      <th class="heading">Analyze</th>
+      <th class="heading">Feed</th>
+      <th class="heading">View</th>
     </tr>
-      <a href="Product-Entry.html">Product Entry</a>
+    <a href="Product-Entry.html">Product Entry</a>
+</table>-->
+</body>
 
-
-  </table>
-
-
-  </body>
 </html>
