--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 </head>
 
 <body>
-  <div class="header">
-    <img class="roun" src="newlogo.png" alt="Logo">
+  <div>
+    <img class="roun" src="image/newlogo.png" alt="Logo">
     <h1 class="mnam"><span class="under">Pro</span>duct <span class="under">Da</span>ta <span class="under">Ma</span>nagement <span class="under">S</span>ystem</h1>
   </div>
   <div class="main_box">
@@ -22,19 +22,99 @@
       <div class="feed_ins">
         <a href="Product-Entry.html">Bulk IX</a>
       </div>
+      <div class="centre_base">
+        Master Log
+      </div>
+      <div class="feed_ins">
+        <a href="Product-Entry.html">Bulk VIII</a>
+      </div>
+      <div class="feed_ins">
+        <a href="Product-Entry.html">Bulk IX</a>
+      </div>
+      <div class="centre_base">
+        Product Log
+      </div>
+      <div class="feed_ins">
+        <a href="Product-Entry.html">Bulk VIII</a>
+      </div>
+      <div class="feed_ins">
+        <a href="Product-Entry.html">Bulk IX</a>
+      </div>
+      <div class="centre_base">
+        Activity Log
+      </div>
+      <div class="feed_ins">
+        <a href="Product-Entry.html">Bulk VIII</a>
+      </div>
+      <div class="feed_ins">
+        <a href="Product-Entry.html">Bulk IX</a>
+      </div>
+      <div class="centre_base">
+        Rejection Log
+      </div>
+      <div class="feed_ins">
+        <a href="Product-Entry.html">Bulk VIII</a>
+      </div>
+      <div class="feed_ins">
+        <a href="Product-Entry.html">Bulk IX</a>
+      </div>
+      <div class="centre_base">
+        Manpower Log
+      </div>
+      <div class="feed_ins">
+        <a href="Product-Entry.html">Bulk VIII</a>
+      </div>
+      <div class="feed_ins">
+        <a href="Product-Entry.html">Bulk IX</a>
+      </div>
+      <div class="centre_base">
+        Parameter Log
+      </div>
     </div>
     <div class="view">
       <h2 class="sub">VIEW</h2>
-    </div>
+      <div class="feed_ins">
+        <a href="Product-Entry.html">Bulk VIII</a>
+      </div>
+      <div class="feed_ins">
+        <a href="Product-Entry.html">Bulk IX</a>
+      </div>
+      <div class="feed_ins">
+        <a href="Product-Entry.html">Bulk VIII</a>
+      </div>
+      <div class="feed_ins">
+        <a href="Product-Entry.html">Bulk IX</a>
+      </div>
+      <div class="feed_ins">
+        <a href="Product-Entry.html">Bulk VIII</a>
+      </div>
+      <div class="feed_ins">
+        <a href="Product-Entry.html">Bulk IX</a>
+      </div>
 
+      <div class="feed_ins">
+        <a href="Product-Entry.html">Bulk VIII</a>
+      </div>
+      <div class="feed_ins">
+        <a href="Product-Entry.html">Bulk IX</a>
+      </div>
+
+      <div class="feed_ins">
+        <a href="Product-Entry.html">Bulk VIII</a>
+      </div>
+      <div class="feed_ins">
+        <a href="Product-Entry.html">Bulk IX</a>
+      </div>
+
+      <div class="feed_ins">
+        <a href="Product-Entry.html">Bulk VIII</a>
+      </div>
+      <div class="feed_ins">
+        <a href="Product-Entry.html">Bulk IX</a>
+      </div>
+
+    </div>
   </div>
-  <!--<table cellspacing="10">
-    <tr>
-      <th class="heading">Feed</th>
-      <th class="heading">View</th>
-    </tr>
-    <a href="Product-Entry.html">Product Entry</a>
-</table>-->
 </body>
 
 </html>
