--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
   <div>
-    <img class="roun" src="image/newlogo.png" alt="Logo">
+    <img class="roun" src="newlogo.png" alt="Logo">
     <h1 class="mnam"><span class="under">Pro</span>duct <span class="under">Da</span>ta <span class="under">Ma</span>nagement <span class="under">S</span>ystem</h1>
   </div>
   <div class="main_box">
