--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
 
@@ -10,30 +11,31 @@
 
 <body>
   <div>
-    <img class="roun" src="newlogo.png" alt="Logo">
+    <img class="roun" src="image/newlogo.png" alt="Logo">
     <h1 class="mnam"><span class="under">Pro</span>duct <span class="under">Da</span>ta <span class="under">Ma</span>nagement <span class="under">S</span>ystem</h1>
   </div>
   <div class="main_box">
     <div class="feed">
       <h2 class="sub">FEED</h2>
-      <div class="feed_ins">
-        <a href="Product-Entry.html">Bulk VIII</a>
+      <div class="nfeed_ins">
+        <a href="Product-Entry.html">Product</a>
       </div>
-      <div class="feed_ins">
-        <a href="Product-Entry.html">Bulk IX</a>
+      <div class="nfeed_ins">
+        <a href="Batch-Entry-Form.html">Batch</a>
       </div>
+      <div class="nfeed_ins">
+        <a href="Line-Entry-Form.html">Line</a>
+      </div>
+      <div class="nfeed_ins">
+        <a href="Line-Entry-Form.html">Activity</a>
+      </div>
+
+
       <div class="centre_base">
         Master Log
       </div>
-      <div class="feed_ins">
-        <a href="Product-Entry.html">Bulk VIII</a>
-      </div>
-      <div class="feed_ins">
-        <a href="Product-Entry.html">Bulk IX</a>
-      </div>
-      <div class="centre_base">
-        Product Log
-      </div>
+      <hr>
+      
       <div class="feed_ins">
         <a href="Product-Entry.html">Bulk VIII</a>
       </div>
@@ -43,6 +45,7 @@
       <div class="centre_base">
         Activity Log
       </div>
+      <hr>
       <div class="feed_ins">
         <a href="Product-Entry.html">Bulk VIII</a>
       </div>
@@ -52,6 +55,7 @@
       <div class="centre_base">
         Rejection Log
       </div>
+      <hr>
       <div class="feed_ins">
         <a href="Product-Entry.html">Bulk VIII</a>
       </div>
@@ -61,6 +65,7 @@
       <div class="centre_base">
         Manpower Log
       </div>
+      <hr>
       <div class="feed_ins">
         <a href="Product-Entry.html">Bulk VIII</a>
       </div>
@@ -73,48 +78,51 @@
     </div>
     <div class="view">
       <h2 class="sub">VIEW</h2>
+      <div class="nfeed_ins">
+        <a href="Product-Entry.html">Product</a>
+      </div>
+      <div class="nfeed_ins">
+        <a href="Product-Entry.html">Batch</a>
+      </div>
+      <div class="nfeed_ins">
+        <a href="Product-Entry.html">Line</a>
+      </div>
+      <div class="nfeed_ins">
+        <a href="Product-Entry.html">Activity</a>
+      </div>
+      <hr>
       <div class="feed_ins">
         <a href="Product-Entry.html">Bulk VIII</a>
       </div>
       <div class="feed_ins">
         <a href="Product-Entry.html">Bulk IX</a>
       </div>
+      <hr>
       <div class="feed_ins">
         <a href="Product-Entry.html">Bulk VIII</a>
       </div>
       <div class="feed_ins">
         <a href="Product-Entry.html">Bulk IX</a>
       </div>
+      <hr>
       <div class="feed_ins">
         <a href="Product-Entry.html">Bulk VIII</a>
       </div>
       <div class="feed_ins">
         <a href="Product-Entry.html">Bulk IX</a>
       </div>
-
+      <hr>
       <div class="feed_ins">
         <a href="Product-Entry.html">Bulk VIII</a>
       </div>
       <div class="feed_ins">
         <a href="Product-Entry.html">Bulk IX</a>
       </div>
-
-      <div class="feed_ins">
-        <a href="Product-Entry.html">Bulk VIII</a>
-      </div>
-      <div class="feed_ins">
-        <a href="Product-Entry.html">Bulk IX</a>
-      </div>
-
-      <div class="feed_ins">
-        <a href="Product-Entry.html">Bulk VIII</a>
-      </div>
-      <div class="feed_ins">
-        <a href="Product-Entry.html">Bulk IX</a>
-      </div>
-
     </div>
   </div>
 </body>
+<footer >
+  Devoloped and Maintained By: Shivkant Singh Bhadoria
+</footer>
 
 </html>
