--- a/Product-Entry.html
+++ b/Product-Entry.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Product Entry Form</title>
+    <link rel="stylesheet" href="css/styles.css">
   </head>
   <body>
     <h1>Product Entry Form</h1>
@@ -19,36 +20,37 @@
       </tr>
       <tr>
         <td>
-          <label for="">Batch No:</label>
+          <label for="">FG Code:</label>
         </td>
         <td>
-          <input type="text" name="Batch No" value=""><br>
+          <input type="text" name="FG Code" value=""><br>
         </td>
       </tr>
       <tr>
         <td>
-          <label for="">Batch Size:</label>
+          <label for="">WIP Code:</label>
         </td>
         <td>
-          <input type="text" name="Batch Size" value=""><br>
+          <input type="text" name="WIP Code" value=""><br>
         </td>
       </tr>
       <tr>
         <td>
-          <label for="">MFG:</label>
+          <label for="">Market:</label>
         </td>
         <td>
-          <input type="date" name="MFG" value=""><br>
+          <input type="text" name="Market" value=""><br>
         </td>
       </tr>
       <tr>
         <td>
-          <label for="">EXP:</label>
+          <label for="">SHELF LIFE:</label>
         </td>
         <td>
-          <input type="date" name="EXP" value=""><br>
+          <input type="number" name="SHELF LIFE" value=""><br>
         </td>
       </tr>
+
       <tr>
         <td>
           <label for="">Pack Style:</label>
@@ -62,7 +64,15 @@
           <label for="">Shipper Configuration:</label>
         </td>
         <td>
-          <input type="text" name="Shipper" value=""><br>
+          <input type="number" name="Shipper" value=""><br>
+        </td>
+      </tr>
+      <tr>
+        <td>
+          <label for="">Serialization:</label>
+        </td>
+        <td>
+          <input type="checkbox" name="Serialization" value=""><br>
         </td>
       </tr>
       <tr>
